09 Admin/App Data/Noctyrium/Diagnostics/noctyrium_daily_file_architecture_fix_v2.2026-05-01_15-22-19.txt
===== NOCTYRIUM DAILY FILE ARCHITECTURE FIX V2 =====
Generated: Fri May  1 15:22:19 AST 2026

===== BACKUPS =====
Backed up: /Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift
Backed up: /Users/jd/Medical School/09 Admin/Scripts/dashboard_stats.sh
Backed up: /Users/jd/Medical School/09 Admin/App Data/Noctyrium/Productivity/active_study_day.txt
Backed up: /Users/jd/Medical School/09 Admin/App Data/manual_study_day.txt
Backed up: /Users/jd/Medical School/09 Admin/App Data/productivity_log.csv
Backed up: /Users/jd/Medical School/09 Admin/App Data/Noctyrium/Productivity/productivity_day_archive.csv

===== NORMALIZE ACTIVE DAY =====
active=2026-05-05

===== CREATE CURRENT DAILY FILE FROM LOG =====
Created/updated: /Users/jd/Medical School/09 Admin/App Data/Noctyrium/Productivity/Days/2026-05-05.csv

===== PATCH SWIFT DAILY FILE FUNCTIONS =====
Swift patched.

===== PATCH DASHBOARD STATS TO READ ACTIVE DAY ONLY =====
dashboard_stats.sh patched.

===== VERIFY COMPILE =====
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:4:1: error: 'main' attribute cannot be used in a module that contains top-level code
@main
^
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1:1: note: top-level code defined in this source file
import SwiftUI
^
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1:1: note: pass '-parse-as-library' to compiler invocation if this is intentional
import SwiftUI
^
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:959:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1119:63: error: cannot find 'openProductivityDayFile' in scope
                        Heatmap(logs: logs, openDay: { key in openProductivityDayFile(key) })
                                                              ^~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2441:9: warning: initialization of immutable value 'nb3YoungOrBetter' was never used; consider replacing with assignment to '_' or removing it
    let nb3YoungOrBetter = nb3Core.filter { $0.quality >= 2 }
    ~~~~^~~~~~~~~~~~~~~~
    _
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2716:59: error: cannot find 'openProductivityDayFile' in scope
                    Heatmap(logs: logs, openDay: { key in openProductivityDayFile(key) })
                                                          ^~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3072:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3076:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Swift compile failed. Stop here.
